# hvac-monitoring-backend

./: .gitignore  pyproject.toml
src/monitoring_backend/: di.py  main.py  test_connection.py
src/monitoring_backend/application/adapters/: air_conditioner.py  campus.py  monitoring_payload.py  monitoring_system_type.py  monitoring_unit.py
src/monitoring_backend/application/dto/: errors.py
src/monitoring_backend/application/repositories/: air_conditioner.py  campus.py  monitoring_payload.py  monitoring_system_type.py  monitoring_unit.py
src/monitoring_backend/application/usecases/: usecase.py
src/monitoring_backend/application/usecases/air_conditioner/: search_air_conditioner.py
src/monitoring_backend/application/usecases/campus/: create_campus.py  get_campus_by_id.py  search_campus.py  update_campus.py
src/monitoring_backend/application/usecases/monitoring_payload/: create_monitoring_payload.py  search_monitoring_payload.py
src/monitoring_backend/domain/entity/: air_conditioner.py  campus.py  monitoring_payload.py  monitoring_system_type.py  monitoring_unit.py
src/monitoring_backend/domain/exceptions/: air_conditioner.py  base.py  common.py
src/monitoring_backend/domain/vo/: name.py
src/monitoring_backend/infra/http/: exception_handlers.py
src/monitoring_backend/infra/http/routers/: campus.py  (+4 more)
src/monitoring_backend/scripts/: seed_air_conditioner.py
tests/monitoring_backend/application/usecases/: test_create_client_usecase.py  test_get_client_by_id.py
tests/monitoring_backend/domain/: test_campus.py
tests/monitoring_backend/domain/vo/: name.py
(+35 files in other folders)
